tests/flat_file/ui/auto_plugin_missing_param_with_multiple.rs
use bevy_auto_plugin::modes::flat_file::prelude::*;

#[auto_plugin]
fn plugin(_app: &bevy_app::App, _: bool) {}

// dummy main
fn main() {}
